fix: set classpath in commandline shellscript for linux